[B]Version 1.1.75[/B]
Aagmaal Pro - fix thumbnails
Desi Porn - Domain change
Chaturbate - tags sorted alphabetically
CelebsRoulette - new site
Americass - new site
Youcrazyx - fix images
Pornhoarder - new site
FamilyPornHD - fix playback