@@ -7,3 +7,4 @@ Americass - new site
 Youcrazyx - fix images
 Pornhoarder - new site
 FamilyPornHD - fix playback
+Animeidhentai - fix playback, listing
